# topos

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOMIZE.md  DONATE-de.md  DONATE.md  LICENSE  Makefile  README-de.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  install.cmd  install.command  install.ps1  install.ps1.template  install.sh  install.sh.template  mkdocs.yml  pyproject.toml  start.sh  stop.sh  uninstall.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  backup_history.py  config_overlay.py  credential_store.py  data_dir_migration.py  database.py  exceptions.py  hookspecs.py  job_store.py  licensing.py  logging_config.py  main.py  paths.py  secrets_store.py  voice_store.py  yaml_io.py
backend/app/ai/: __init__.py  article_template_prompts.py  book_template_prompts.py  config.py  connection.py  llm_client.py  pricing.py  prompts.py  providers.py  review_store.py  routes.py  seo_prompts.py  template_schema.py  vision.py  vision_clients.py  vision_parsing.py  vision_prompt.py  vision_schemas.py
backend/app/data/: builtin_chapter_templates.py  builtin_templates.py  platform_schemas.yaml
backend/app/import_plugins/: __init__.py  overrides.py  protocol.py  registry.py
backend/app/middleware/: __init__.py  body_size_limit.py
backend/app/models/: __init__.py  action.py  category.py  container.py  item.py
backend/app/routers/: actions.py  ai_settings.py  ai_template_bulk.py  ai_template_bulk_fill.py  ai_vision.py  article_ai_fill.py  article_ai_template.py  article_assets.py  articles.py  assets.py  authors.py  backup.py  book_ai_fill.py  book_ai_template.py  books.py  bulk_delete.py  categories.py  chapter_templates.py  chapters.py  comments.py  containers.py  covers.py  import_orchestrator.py  items.py  licenses.py  plugin_install.py  publications.py  settings.py  templates.py  websocket.py
backend/app/schemas/: __init__.py  action.py  category.py  container.py  item.py
backend/app/services/: __init__.py  actions.py  categories.py  containers.py  covers.py  items.py  platform_schema.py  reclassify.py
backend/config/: app.yaml.example
backend/config/i18n/: AUTO_TRANSLATED.md  REVIEW_STATUS.md  de.yaml  el.yaml  en.yaml  es.yaml  fr.yaml  ja.yaml  pt.yaml  tr.yaml
backend/migrations/: env.py
backend/migrations/versions/: 0b846e96f438_initial_topos_schema.py  27543fc05a0c_add_ai_assisted_flag_to_books.py  49ec96aa2e94_add_tts_voice_settings_to_books.py  880d5f5f1229_add_audio_voices_table.py  a0b1c2d3e4f5_add_publications_and_article_seo.py  a1b2c3d4e5f6_add_audiobook_merge_to_books.py  a1b2c3d4e5f7_add_ai_tokens_used_to_books.py  a3b4c5d6e7f8_add_book_import_sources.py  b1c2d3e4f5a6_add_topic_seo_to_articles.py  b2c3d4e5f6a7_add_audiobook_filename_to_books.py  b5c6d7e8f9a0_book_author_nullable.py  b7c8d9e0f1a2_add_book_templates.py  c0a1b2c3d4e5_add_articles_series.py  c2d3e4f5a6b7_add_article_assets.py  c3d4e5f6a7b8_add_quality_to_audio_voices.py  c6d7e8f9a0b1_add_tts_speed_to_books.py  c8d9e0f1a2b3_add_chapter_templates.py  d3e4f5a6b7c8_add_article_deleted_at.py  d4e5f6a7b8c9_add_ms_tools_thresholds_to_books.py  d7e8f9a0b1c2_add_git_sync_mappings.py  d8e9f0a1b2c3_add_article_import_sources.py  e1f2a3b4c5d6_add_version_to_chapters.py  e4f5a6b7c8d9_add_article_ai_tokens_used.py  e5f6a7b8c9d0_add_audiobook_overwrite_to_books.py  e8f9a0b1c2d3_add_translation_group_id.py  e9f0a1b2c3d4_add_ai_template_columns.py  f0a1b2c3d4e5_add_article_comments.py  f2a3b4c5d6e7_add_chapter_versions_table.py  (+7 more)
backend/tests/: conftest.py  import_helpers.py  test_ai_client.py  test_ai_config.py  test_ai_config_refresh.py  test_ai_connection.py  test_ai_marketing.py  test_ai_providers.py  test_ai_review.py  test_ai_review_store.py  test_ai_settings_api.py  test_ai_template_bulk.py  test_ai_template_bulk_fill.py  test_ai_usage_tracking.py  test_ai_vision_clients.py  test_ai_vision_parsing.py  test_ai_vision_prompt.py  test_alembic_drift.py  test_api.py  test_app_config_bootstrap.py  test_article_ai_fill.py  test_article_ai_meta.py  test_article_ai_template.py  test_article_assets.py  test_article_comment_model.py  test_article_import_source.py  test_articles.py  test_asset_rewrite.py  test_authors.py  test_backup_articles.py  test_backup_compare.py  test_backup_history.py  test_backup_utils.py  test_backup_utils_direct.py  test_bgb_handler.py  test_body_size_limit.py  test_book_ai_fill.py  test_book_ai_template.py  test_book_import_source.py  test_books_categories_bisac.py  (+51 more)
docs/: API.md  CONCEPT.md  ROADMAP.md  backlog.md  configuration.md  handover.md  pyproject.toml  smoke-tests-catalog.md  ux-conventions.md
docs/architecture/: state-machines.md
docs/data/: Ordner-Ordnung.xlsx
docs/explorations/: README.md  dependency-strategy.md  optimization-report-2026-04-28.md  prompt-ux-convention-document.md  secrets-refactor-audit.md
docs/help/: SCREENSHOTS-TODO.md  _meta.yaml
docs/help/de/: ai.md  (+15 more)
docs/journal/: chat-journal-session-2026-07-18.md  chat-journal-session-2026-07-20.md  handover-2026-05-21.md
docs/prompts/: Topos-Bootstrap-Prompt.md
docs/testing/: coverage-matrix.md  test-plan.md  test-result-template.md  tester-onboarding.md
launcher/: myapp-launcher.spec  pyproject.toml  topos-launcher.spec  version_info.txt
launcher/myapp_launcher/: __init__.py  __main__.py  config.py  docker.py  health.py  i18n.py  installer.py  lockfile.py  manifest.py  settings.py  ui.py  update_check.py
launcher/scripts/: make_icns.py  make_icon.py
launcher/tests/: test_cleanup_retry.py  test_config.py  test_docker.py  test_health.py  test_i18n_and_welcome.py  test_i18n_parity.py  test_installer.py  test_lockfile.py  test_main_imports.py  test_manifest.py  test_pre_install_check.py  test_settings.py  test_update_check.py
launcher/topos_launcher/: __init__.py  __main__.py  config.py  docker.py  health.py  i18n.py  installer.py  manifest.py  settings.py  ui.py  update_check.py
plugins/topos-plugin-excel-import/: pyproject.toml
(+559 files in other folders)
