[tool.poetry]
name = "pluginforge-app-template"
version = "0.1.0"
description = "Full-stack application template built on PluginForge. FastAPI + React + TypeScript + SQLite + PyInstaller launcher. Plugin-driven architecture with CI, tests, i18n, and cross-OS distribution out of the box."
authors = ["Asterios Raptis"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.136.0"
uvicorn = { extras = ["standard"], version = "^0.46.0" }
sqlalchemy = "^2.0.49"
pydantic = "^2.13.0"
python-multipart = "^0.0.27"
platformdirs = "^4.2.0"
pluginforge = "^0.10.0"
markdown = "^3.10.2"
alembic = "^1.18.4"
pillow = "^12.0.0"
gtts = "^2.5.0"
pyttsx3 = "^2.90"
elevenlabs = "^0.2.27"
cryptography = "^48.0.0"
ruamel-yaml = "^0.19.0"
gitpython = "^3.1.40"
edge-tts = "^7.2.8"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
httpx = "^0.28.0"
mutmut = "^3.5.0"
mypy = "^1.20.0"
types-pyyaml = "^6.0.12.20250915"
types-markdown = "^3.10.2.20260211"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"
ruff = "^0.15.11"
pre-commit = "^4.5.1"
pip-audit = "^2.10.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Conservative baseline. Tighten in follow-ups once the code is clean
# against the current set.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",   # line length - handled by formatter, too noisy to fix blind
    "B008",   # function-call-in-default-argument - FastAPI `Depends(...)` idiom is intentional
    "UP042",  # replace-str-enum - `(str, Enum)` base class ships in migrations too; deferred
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]                       # bugbear too strict for test fixtures
"migrations/versions/*" = ["UP"]        # Alembic templates predate py312 syntax
"app/main.py" = ["E402"]                # setup_logging() before imports is intentional
"app/licensing.py" = ["E402"]           # LICENSING_ENABLED flag before imports is intentional

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = "pluginforge.*"
ignore_missing_imports = true

[tool.mutmut]
# Mutation-testing scope. Adapt per project: list the modules
# worth mutating and the matching test files. Keep narrow on
# laptop-class CI; widen on dedicated hardware.
paths_to_mutate = ["app/import_plugins/", "app/services/"]
tests_dir = [
    "tests/test_import_plugins_protocol.py",
    "tests/test_import_duplicate_flows.py",
    "tests/test_import_staging_gc.py",
    "tests/test_bgb_handler.py",
    "tests/test_markdown_handler.py",
    "tests/test_markdown_folder_handler.py",
    "tests/test_office_handlers.py",
    "tests/test_backup_articles.py",
    "tests/test_overrides_yaml_loader.py",
    "tests/test_backup_compare.py",
    "tests/test_backup_history.py",
    "tests/test_backup_utils.py",
    "tests/test_backup_utils_direct.py",
    "tests/test_covers.py",
    "tests/test_credential_store.py",
    "tests/test_import_backup_parity.py",
    "tests/test_reclassify_endpoints.py",
    "tests/test_platform_schema.py",
]
do_not_mutate = ["app/main.py", "app/database.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
