[tool.poetry]
name = "topos-docs"
version = "0.1.0"
description = "Topos documentation build tools (MkDocs)"
authors = ["Asterios Raptis"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.0"
mkdocs-static-i18n = "^1.2.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
