[project]
name = "topos-plugin-excel-import"
version = "0.1.0"
description = "Import an Ordner-Ordnung.xlsx file (or any compatible Topos seed Excel) into the Topos database."
authors = [{name = "Asterios Raptis"}]
license = "MIT"
requires-python = ">=3.11,<4.0"

[project.entry-points."topos.plugins"]
excel_import = "topos_excel_import.plugin:ExcelImportPlugin"

[tool.poetry]
packages = [{include = "topos_excel_import"}]

[tool.poetry.dependencies]
python = "^3.11"
pluginforge = "^0.10.0"
openpyxl = "^3.1.2"
fastapi = "^0.136.0"
sqlalchemy = "^2.0.49"
pydantic = "^2.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",  # line length - handled by formatter
    "B008",  # FastAPI Depends/File idiom is intentional in argument defaults
]
